<resources>
    <string name="app_name">My Application</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_hint">请输入用户名</string>
    <string name="pwd_hint1">请输入密码</string>
    <string name="pwd_hint2">请重新输入密码</string>
    <string name="code_hint">请输入四位验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>